--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'E151'
 - !lcsh 'United States -- History'
+- GITenberg
 title: 'The Land We Live In
 
   The Story of Our Country'
